# chatlog-keeper

./: .gitignore  DISCLAIMER.md  DISCLAIMER.zh.md  README.md  README.zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
chatlog_keeper/: __init__.py  active_key.py  cli.py  export.py  qq_db.py  wechat_contacts.py  wechat_db.py  wechat_image.py  wechat_link_fetcher.py
chatlog_keeper/core/: _path_resolver.py  _paths.py  trace_sink.py
chatlog_keeper/scripts/: windows_ntqq_get_key.ps1  windows_wechat_get_key.ps1
examples/: README.md
packaging/: chatlog_keeper.spec  chatlog_keeper_main.py
tests/: test_active_key.py  test_cli_extract_key.py  test_force_extract.py  test_probe_no_scan.py  test_qq_passive_scan.py  test_smoke.py
