[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chatlog-keeper"
version = "0.1.1"
description = "Decrypt and export your own local QQ / WeChat chat history for personal backup and nostalgia. Local-only; nothing is uploaded."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "labazhou2024" }]
keywords = ["chat", "backup", "export", "nostalgia", "wechat", "qq", "personal-data", "data-portability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
]
dependencies = [
    "pycryptodome>=3.18",
    "numpy>=1.21",
    "zstandard>=0.20",
]

# Intentionally source-only: this package is NOT published to PyPI. Install from a
# local clone (`pip install .`) so you always run code you can read and audit.
[project.optional-dependencies]
images = ["Pillow>=9.0"]               # decrypt/transcode WeChat image .dat
ocr = ["rapidocr-onnxruntime>=1.3"]    # optional OCR over decrypted images

[project.scripts]
chatlog-keeper = "chatlog_keeper.cli:main"

[project.urls]
Homepage = "https://github.com/labazhou2024/chatlog-keeper"
Source = "https://github.com/labazhou2024/chatlog-keeper"

[tool.setuptools.packages.find]
include = ["chatlog_keeper*"]

[tool.setuptools.package-data]
# Bundle the PowerShell debugger scripts used by `extract-key --method active`.
chatlog_keeper = ["scripts/*.ps1"]
